load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "first",
    srcs = ["first.cc"],
    hdrs = ["first.h"],
)

cc_library(
    name = "second",
    srcs = ["second.cc"],
    hdrs = ["second.h"],
)

cc_binary(
    name = "solve",
    srcs = ["solve.cc"],
    data = ["//data:input"],
    deps = [
        ":first",
        ":second",
    ],
)
